add length todo and corrections error map tasklist

--- a/src/pages/TodoPage/TodoPage.module.scss
+++ b/src/pages/TodoPage/TodoPage.module.scss
@@ -14,6 +14,10 @@
   border: $borderList;
   width: 50%;
   margin: 20px auto;
+  h5 {
+    margin: 0;
+    position: absolute;
+  }
 }
 .containerHeader {
   align-self: flex-start;
